--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@
 <meta name="author" content="olOwOlo" />
   <meta name="description" content="" />
 
-  <meta name="keywords" content="Hugo, theme, even" />
+  <meta name="keywords" content="detry, blog" />
 
 
 
@@ -82,7 +82,7 @@
 <body>
   <div id="mobile-navbar" class="mobile-navbar">
   <div class="mobile-header-logo">
-    <a href="/" class="logo">Even</a>
+    <a href="/" class="logo">detry&#39;s blog</a>
   </div>
   <div class="mobile-navbar-icon">
     <span></span>
@@ -106,7 +106,7 @@
   <div class="container" id="mobile-panel">
     <header id="header" class="header">
         <div class="logo-wrapper">
-  <a href="/" class="logo">Even</a>
+  <a href="/" class="logo">detry&#39;s blog</a>
 </div>
 
 <nav class="site-navbar">
@@ -165,7 +165,7 @@
   <span class="copyright-year">
     &copy; 
     
-      2017 - 
+      2016 - 
     2018
     <span class="heart">
       <i class="iconfont icon-heart"></i>
