--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="#f8f5ec">
 
 
-<meta name="author" content="olOwOlo" />
+<meta name="author" content="detry" />
   <meta name="description" content="" />
 
   <meta name="keywords" content="detry, blog" />
@@ -170,7 +170,7 @@
     <span class="heart">
       <i class="iconfont icon-heart"></i>
     </span>
-    <span class="author">olOwOlo</span>
+    <span class="author">detry</span>
   </span>
 </div>
 
